add jb notebook caveat to tutorial

--- a/How-To-Use-Goodreads-Scraper.ipynb
+++ b/How-To-Use-Goodreads-Scraper.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupyter notebook will walk you through how to collect Goodreads reviews and Goodreads book metadata (# reviews, # ratings, shelves, etc.) with our [Goodreads Scraper](https://github.com/maria-antoniak/goodreads-scraper) Python scripts."
+    "This Jupyter notebook will walk you through how to collect Goodreads reviews and Goodreads book metadata (# reviews, # ratings, shelves, etc.) with our [Goodreads Scraper](https://github.com/maria-antoniak/goodreads-scraper) Python scripts.\n",
+    "\n",
+    "*Note: We recommend running these Python scripts from the command line. Please note that these scripts may not work consistently from a Jupyter notebook environment and that the tutorial is mostly intended for demonstration purposes.*"
    ]
   },
   {
